--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
 }
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 /* For mobile phones: */
 [class*="col-"] {
     width: 100%;
@@ -22,10 +23,9 @@
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
     [class*="col-"] {
-        padding: 30px;
+        padding: 20px;
     }
 }
-
 @media only screen and (max-width: 767px) {
     [class*="col-"] {
         text-align: center;
@@ -42,24 +42,33 @@
     clear: both;
     display: table;
 }
+@media only screen and (max-width: 767px) {
+    .row {
+        padding: 0;
+    }
+}
 html {
     scroll-behavior: smooth;
 }
 body {
     margin: 0;
 }
+h1, h2, h3, h4, h5, h6, a, p, q, li, #caption {
+    font-family: 'Lato', sans-serif;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 700;
+} 
+a, p, q, li {
+    font-weight: 400;
+}
 h1 {
-    font-family: Rubik, Arial, Helvetica, sans-serif;
     font-size: 60px;
 }
 @media only screen and (max-width: 767px) {
     h1 {
         font-size: 30px;
     } 
-}
-h2, h3, h4, h5, h6, a, p, li {
-    font-family: 'Varela Round', Arial, Helvetica, sans-serif;
-    font-weight: 400;
 }
 h2 {
     font-size: 36px;
@@ -70,17 +79,17 @@ h2 {
     }
 }
 h3 {
-    font-size: 30px;
+    font-size: 24px;
 }
 @media only screen and (max-width: 767px) {
     h3 {
-        font-size: 20px;
+        font-size: 18px;
     }
 }
 h4 {
-    font-size: 20px;
+    font-size: 16px;
 }
-p, li {
+p, q, li {
     color: #3a3a3a;
     font-size: 16px;
     line-height: 1.5rem;
@@ -90,9 +99,16 @@ a {
 }   
 hr {
     width: 50px;
-    border-color: #c73535;
+    height: 5px;
+    border: none;
+    /* border-color: #791E89;
     border-width: 2px;
-    border-style: solid;
+    border-style: solid; */
+    background: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8))
+}
+.container-1140 {
+    max-width: 1140px;
+    margin: auto;
 }
 .container-1080 {
     max-width: 1080px;
@@ -106,23 +122,32 @@ hr {
     max-width: 700px;
     margin:auto;
 }
-.header {
-    padding: 10px;
-}
 .header .logo {
-    text-align: center;
+    text-align: left;
 }
 .header .logo img {
     max-width: 250px;
 }
+.header .row {
+    padding: 0;
+}
 @media only screen and (max-width: 767px) {
+    .header {
+        padding: 0 20px;
+    }
     .header .logo img {
         max-width: 150px;
+    }
+    .header .logo {
+        text-align: center;
+    }
+    .header .col-2, .header .col-10 {
+        padding-bottom: 10px;
     }
 }
 /* Add a red background color to the top navigation */
 .topnav {
-    background-color: #c73535;
+    /* background-color: #791E89; */
     overflow: hidden;
 }
 /* Style the links inside the navigation bar */
@@ -130,7 +155,7 @@ hr {
     float: left;
     /* float:right; */
     display: block;
-    color: #f2f2f2;
+    color: #791E89;
     text-align: center;
     padding: 10px 16px;
     text-decoration: none;
@@ -146,6 +171,11 @@ hr {
     background-color: #000000;
     color: white;
 } */
+@media only screen and (min-width: 768px) {
+    .nav {
+        float: right;
+    }
+}
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
     display: none;
@@ -163,7 +193,7 @@ hr {
     color: white;
     padding: 10px 16px;
     background-color: inherit;
-    font-family: 'Varela Round', Arial, Helvetica, sans-serif;
+    font-family: 'Lato', sans-serif;
     margin: 0;
 }
 /* Style the dropdown content (hidden by default) */
@@ -186,7 +216,7 @@ hr {
 }
 /* Add a dark background on topnav links and the dropdown button on hover */
 .topnav a:hover, .dropdown:hover .dropbtn {
-    background-color: #555;
+    background-color: #791E89;
     color: white;
 }
 /* Add a grey background to dropdown links on hover */
@@ -205,7 +235,7 @@ hr {
     .topnav a.icon {
       float: right;
       display: block;
-      background-color: #c73535;
+      background-color: #791E89;
     }
 }
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@@ -215,7 +245,7 @@ hr {
       position: absolute;
       right: 0;
       top: 0;
-      background-color: #c73535;
+      background-color: #791E89;
     }
     .topnav.responsive a {
         float: none;
@@ -239,7 +269,7 @@ hr {
 }
 
 .nav {
-    background-color: #c73535;
+    /* background-color: #791E89; */
     padding: 10px;
 }
 @media only screen and (max-width:767px) {
@@ -263,7 +293,7 @@ hr {
 }
 .hero {
     background-color: transparent;
-    background-image: linear-gradient(90deg, rgb(64, 84, 178, 0.8), rgb(204, 0, 0, 0.8)),
+    background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8)),
         url("https://sybiltec.com/images/blog07-free-img.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -271,7 +301,7 @@ hr {
 }
 @media screen and (max-width: 767px) {
     .hero {
-        background-image: linear-gradient(90deg, rgb(64, 84, 178, 0.8), rgb(204, 0, 0, 0.8)),
+        background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8)),
         url("https://sybiltec.com/images/blog07-free-img-800x450.jpg");
     }
 }
@@ -283,6 +313,16 @@ hr {
 }
 .clients {
     text-align: center;
+    background: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8));
+}
+.clients video {
+    filter: drop-shadow(0px 4px 40px rgba(0, 0, 0, 0.25));
+}
+.portfolio h2 {
+    margin-top: 0;
+}
+.testimonials {
+    padding-top: 60px;
 }
 .testimonials img {
     height: 80px;
@@ -292,10 +332,15 @@ hr {
     text-align: center;
 }
 .contact {
-    background-color: #c73535;
+    /* background-color: #791E89; */
+    background: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 0.8))
 }
 .contact h3, .contact p {
     color: #ffffff;
+    margin-top: 0;
+    /* text-align: center; */
+}
+.contact .col-4 {
     text-align: center;
 }
 .footer {
@@ -322,26 +367,29 @@ hr {
     max-height: 70px;
 }
 .copyright a {
-    color: #c73535
+    color: #791E89
 }
 .grey {
     background-color: #f6f6f6;
 }
+.violet {
+    background-color: #791E89;
+}
 .shadow-box {
     box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.07);
     background-color: #ffffff;
-    border-radius: 5px;
+    border-radius: 12px;
     padding: 20px;
 }
 .shadow-box-2 {
     box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.07);
     background-color: #ffffff;
-    border-radius: 5px;
-    margin: 20px;
+    border-radius: 12px;
+    margin: 40px 20px;
 }
 i {
-    color:#c73535;
-    font-size: 50px;
+    color:#791E89;
+    font-size: 40px;
 }
 .center {
     text-align: center;
@@ -352,12 +400,12 @@ i {
 .left-align {
     margin-left:0;
 }
-.btn-contact {
+/* .btn-contact {
     border: 1px solid #ffffff;
-    background-color: #c73535;
+    background-color: #791E89;
     color: #ffffff;
     padding: 15px 40px;
-    border-radius: 50px;
+    border-radius: 6px;
     text-decoration: none;
     margin-top: 30px;
     text-align: center;
@@ -366,15 +414,15 @@ i {
     color: #ffffff;
 }
 .btn-contact:hover {
-    color: #c73535;
+    color: #791E89;
     border: 1px solid #ffffff;
     background-color: #ffffff;
-}
+} */
 .btn-cnt {    
     background-color: rgb(1,85,149);   
     color: #ffffff;
     padding: 15px 40px;
-    border-radius: 50px;
+    border-radius: 6px;
     text-decoration: none;
     margin-top: 30px;
 }
@@ -382,30 +430,31 @@ i {
     background-color: rgb(39,161,218);
 }
 .btn-primary {
-    background-color: #c73535;
-    color: #ffffff;
+    background-color: #D5BB32;
+    color: #000000;
     padding: 15px 40px;
-    border-radius: 50px;
+    border-radius: 6px;
     text-decoration: none;
     margin-top: 30px;
     text-align: center;
 }
 .btn-primary:hover {
     background-color: #000000;
+    color: #ffffff;
 }
 .btn-secondary {
-    border: 1px solid #c73535;
-    background-color: #ffffff;
-    color:#c73535;
+    border: 1px solid #D5BB32;
+    background-color: #D5BB32;
+    color:#000000;
     padding: 15px 40px;
-    border-radius: 50px;
+    border-radius: 6px;
     text-decoration: none;
     margin-top: 30px;
     text-align: center;
 }
 .btn-secondary:hover {
+    background-color: #000000;
     color: #ffffff;
-    background-color: #c73535;
 }
 @media only screen and (max-width: 479px) {
     .btn-cnt, .btn-primary, .btn-secondary, .btn-contact {    
@@ -432,11 +481,11 @@ i {
 }
 ::-moz-selection { /* Code for Firefox */
     color: #ffffff;
-    background: #c73535;
+    background: #D5BB32;
 }
 ::selection {
     color: #ffffff;
-    background: #c73535;
+    background: #D5BB32;
 }
 .videoWrapper {
     position: relative;
@@ -465,7 +514,7 @@ i {
     max-width: 100%;
     max-height: 100%;
     /* Icon color */
-    fill: #c73535;
+    fill: #791E89;
 }
 @media screen and (min-width: 768px) {
     .smaller {
@@ -473,7 +522,7 @@ i {
     }
 }
 .section svg {
-    color:#c73535;
+    color:#791E89;
     font-size: 36px;
 }
 .footer svg {
@@ -481,87 +530,6 @@ i {
     font-size: 30px;
     margin-right: 10px;
 }
-/* cyrillic-ext */
-@font-face {
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url(https://sybiltec.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FWkU1Z4Y.woff2) format('woff2');
-    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
-  }
-  /* cyrillic */
-  @font-face {
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url(https://sybiltec.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FU0U1Z4Y.woff2) format('woff2');
-    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-  }
-  /* hebrew */
-  @font-face {
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url(https://sybiltec.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FVUU1Z4Y.woff2) format('woff2');
-    unicode-range: U+0590-05FF, U+20AA, U+25CC, U+FB1D-FB4F;
-  }
-  /* latin-ext */
-  @font-face {
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url(https://sybiltec.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FWUU1Z4Y.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }
-  /* latin */
-  @font-face {
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url(https://sybiltec.com/fonts/rubik/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-4I-FV0U1.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
-/* hebrew */
-@font-face {
-    font-family: 'Varela Round';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url(https://sybiltec.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfpcuPP9g.woff2) format('woff2');
-    unicode-range: U+0590-05FF, U+20AA, U+25CC, U+FB1D-FB4F;
-  }
-  /* vietnamese */
-  @font-face {
-    font-family: 'Varela Round';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url(https://sybiltec.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfqMuPP9g.woff2) format('woff2');
-    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-  }
-  /* latin-ext */
-  @font-face {
-    font-family: 'Varela Round';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url(https://sybiltec.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfqcuPP9g.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }
-  /* latin */
-  @font-face {
-    font-family: 'Varela Round';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url(https://sybiltec.com/fonts/varelaround/w8gdH283Tvk__Lua32TysjIfp8uP.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
 .myImg {
     border-radius: 5px;
     cursor: pointer;
@@ -679,3 +647,143 @@ i {
     align-items: center;
     flex-wrap: wrap;
 }
+.offer-card {
+    padding: 30px;
+    box-shadow: 0px 4px 40px 0px rgba(121, 29, 136, 0.25);
+    border-radius: 12px;
+}
+.blog-card {
+    box-shadow: 0px 4px 40px 0px rgba(121, 29, 136, 0.25);
+    border-radius: 12px;
+}
+.blog-card img {
+    border-radius: 12px 12px 0 0;
+}
+.blog-card-text {
+    padding: 30px;
+}
+.offer-card:hover, .blog-card:hover {
+    box-shadow: 0px 4px 40px 0px rgba(121, 29, 136, 0.5);
+    transition: box-shadow 1s;
+}
+@media only screen and (max-width: 767px) {
+    .partners img {
+        width: 100%;
+        max-width: 144px;
+    }
+}
+/* Testimonial styling */
+/* Slideshow container */
+.slideshow-container {
+    /* max-width: 1000px; */
+    position: relative;
+    margin: auto;
+    background: #ffffff;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.07);
+    background-color: #ffffff;
+    border-radius: 12px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+    margin: 60px 60px 0px 60px;
+    text-align: center;
+  }
+  
+  .mySlides img {
+    max-width: 100%;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -30px;
+    padding: 16px;
+    color: #791E89;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    position: absolute;
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot-container {
+    text-align: center;
+    padding-bottom: 20px;
+  }
+  
+  .dot {
+    cursor: pointer;
+    height: 8px;
+    width: 8px;
+    margin: 0 2px;
+    background-color: rgb(121 30 137 / 25%);
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #791E89;
+  }
+  
+  /* Add an italic font style to all quotes */
+q {font-style: italic;}
+
+  /* Fading animation */
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
