--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ iframe {
 @media only screen and (min-width: 768px) {
     /* For desktop: */
     .col-1 {width: 8.33%;}
+    .col-1-5 {width: 12.5%}
     .col-2 {width: 16.66%;}
     .col-3 {width: 25%;}
     .col-4 {width: 33.33%;}
