--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ html {
 body {
     margin: 0;
 }
-h1, h2, h3, h4, h5, h6, a, p, q, li, #caption, .breadcrumb, span {
+h1, h2, h3, h4, h5, h6, a, p, q, li, #caption, .breadcrumb, span, table, th, tr, td {
     font-family: 'Lato', sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
@@ -998,4 +998,24 @@ q {font-style: italic;}
 }
 .star {
     height: 16px;
+}
+th, td {
+    border: 1px solid #d9d9d9;
+    padding: 16px;
+}
+th {
+    text-align: left;
+}
+table {
+    border-collapse: collapse;
+}
+@media screen and (max-width: 767px) {
+    .events-table {
+        display: none;
+    }
+}
+@media screen and (min-width: 768px) {
+    .events-list {
+        display: none;
+    }
 }
