--- a/styles.css
+++ b/styles.css
@@ -402,11 +402,12 @@ hr {
     text-align: center;
 }
 .footer {
-    background-color: #000000;
+    background-color: #1e1e1e;
     color: #ffffff;
 }
 .footer p, .footer a {
     color: #ffffff;
+    font-weight: 300;
 }
 .footer p {
     margin: 6px 0;
@@ -431,6 +432,9 @@ hr {
 }
 .copyright a {
     color: #791E89
+}
+.copyright p {
+    font-size: 14px;
 }
 .grey {
     background-color: #f6f6f6;
@@ -892,7 +896,7 @@ q {font-style: italic;}
     padding: 20px 0px;
 }
 .announcement-bar {
-    background-color: #000000;
+    background-color: #1e1e1e;
     /* background-color: transparent; */
     /* background-image: linear-gradient(90deg, #791E89, rgb(204, 0, 0, 1)); */
     /* background-size: cover; */
@@ -904,7 +908,7 @@ q {font-style: italic;}
     color: #ffffff;
     text-decoration: none;
     font-size: 14px;
-    font-weight: 700;
+    font-weight: 400;
 }
 .announcement-bar i {
     padding: 0 10px;
