--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ h1 {
     font-size: 48px;
 }
 @media only screen and (max-width: 767px) {
-    h1 {
+    h1, .hero.homepage h1 {
         font-size: 30px;
     } 
 }
@@ -142,9 +142,13 @@ hr {
 }
 .header {
     box-shadow: rgba(0, 0, 0, 0.1) 0px 25px 20px -20px;
-    position: sticky;
-    top: 0;
     background-color: #ffffff;
+}
+@media only screen and (min-width: 768px) {
+    .header {
+        position: sticky;
+    top: 0;
+    }
 }
 .header .logo {
     text-align: left;
@@ -326,16 +330,9 @@ hr {
 .hero {
     background-color: transparent;
     background-image: linear-gradient(0deg, #7B1E8C, #340d3b);
-    /* background-color: #340d3b; */
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 60px 20px 60px 20px;
-}
-@media screen and (max-width: 767px) {
-    .hero {
-        /* background-image: linear-gradient(90deg, #340d3b, rgb(204, 0, 0, 1)); */
-        padding: 20px;
-    }
+    padding: 60px 20px;
 }
 .hero h1, .hero h2, .hero h3, .hero h4, .hero p {
     color: #ffffff;
@@ -348,13 +345,6 @@ hr {
     font-size: 16px;
     font-weight: 700;
 }
-/* .hero img {
-    border-radius: 500px;
-    border: 8px solid #FFC721;
-    width: 250px;
-    max-width: 100%;
-    filter: drop-shadow(0px 4px 40px rgba(0, 0, 0, 0.25));
-} */
 .hero i {
     padding: 0 10px;
     font-size: 18px;
@@ -395,8 +385,7 @@ hr {
     text-align: center;
 }
 .contact {
-    /* background-color: #340d3b; */
-    background: linear-gradient(90deg, #340d3b, #791E89)
+    background: linear-gradient(0deg, #791E89, #340d3b)
 }
 @media screen and (min-width: 768px) {
     .btn-contact {
