--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 * {
     box-sizing: border-box;
@@ -65,19 +64,12 @@ body {
     margin: 0;
 }
 h1, h2, h3, h4, h5, h6 {
-    /* font-family: 'Lato', sans-serif; */
-    font-family: "Cardo", serif;
     font-weight: 700;
-    /* -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale; */
 }
-a, p, q, li, #caption, .breadcrumb, span, table, th, tr, td {
+h1, h2, h3, h4, h5, h6, a, p, q, li, #caption, .breadcrumb, span, table, th, tr, td {
     font-family: 'Lato', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-a, p, q, li {
-    font-weight: 400;
 }
 h1 {
     font-size: 36px;
