--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,9 @@ iframe {
 @media only screen and (min-width: 768px) {
     /* For desktop: */
     .col-1 {width: 8.33%;}
-    .col-1-5 {width: 12.5%}
+    .col-1-5 {width: 12.5%;}
     .col-2 {width: 16.66%;}
+    .col-2-4 {width: 20%;}
     .col-3 {width: 25%;}
     .col-4 {width: 33.33%;}
     .col-5 {width: 41.66%;}
@@ -427,7 +428,7 @@ hr {
     color: #ffffff;
 }
 .footer img {
-    max-height: 70px;
+    max-height: 100px;
 }
 .footer a {
     text-decoration: none;
